--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/global.css">
+    <script src="https://kit.fontawesome.com/2b06499d88.js" crossorigin="anonymous"></script>
     <title>Lecture-14</title>
 </head>
 <body>
@@ -26,6 +27,7 @@
                     </li>
                 </ul>
             </nav>
+            <i class="fa-solid fa-bars fa-2xl"></i>
         </div>
     </header>
     <section class="s-1">
